universe-apps/environments/prod/ingress-redirect-www.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: www.universe.xyz-redirect
  annotations:
    acme.cert-manager.io/http01-ingress-class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
    external-dns.alpha.kubernetes.io/hostname: www.universe.xyz
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/permanent-redirect: https://universe.xyz
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: www.universe.xyz
    http:
      paths:
      - backend:
          serviceName: dummy
          servicePort: http
        path: /
  tls:
  - hosts:
    - www.universe.xyz
    secretName: www.universe.xyz-tls
